// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Unconfirmed transaction table > should not render in lg 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-96 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 min-w-96 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 text-theme-secondary-500 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-0"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 text-theme-secondary-500 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-0"
                >
                  <span>
                    <span
                      class="font-semibold text-theme-text"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in md 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-96 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 min-w-96 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 text-theme-secondary-500 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-0"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 text-theme-secondary-500 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-0"
                >
                  <span>
                    <span
                      class="font-semibold text-theme-text"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in sm 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td
              class="flex-col py-4 space-y-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex overflow-hidden flex-row-reverse flex-1 justify-end items-center space-x-4 w-0"
                >
                  <div
                    class="flex-1 w-0"
                  >
                    <div
                      class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap"
                    >
                      <span
                        class="text-base font-semibold text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="transition-colors duration-200 no-ligatures"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                      <span
                        class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Address__address"
                      >
                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td
              class="flex-col py-4 space-y-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex overflow-hidden flex-row-reverse flex-1 justify-end items-center space-x-4 w-0"
                >
                  <div
                    class="flex-1 w-0"
                  >
                    <span>
                      <span
                        class="font-semibold text-theme-text"
                        data-testid="TransactionRowRecipientLabel"
                      >
                        Multipayment
                      </span>
                      <span
                        class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in xl 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-96 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 min-w-96 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 text-theme-secondary-500 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-0"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 text-theme-secondary-500 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-0"
                >
                  <span>
                    <span
                      class="font-semibold text-theme-text"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in xs 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td
              class="flex-col py-4 space-y-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex overflow-hidden flex-row-reverse flex-1 justify-end items-center space-x-4 w-0"
                >
                  <div
                    class="flex-1 w-0"
                  >
                    <div
                      class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap"
                    >
                      <span
                        class="text-base font-semibold text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="transition-colors duration-200 no-ligatures"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                      <span
                        class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Address__address"
                      >
                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
            data-testid="TableRow"
          >
            <td
              class="flex-col py-4 space-y-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex overflow-hidden flex-row-reverse flex-1 justify-end items-center space-x-4 w-0"
                >
                  <div
                    class="flex-1 w-0"
                  >
                    <span>
                      <span
                        class="font-semibold text-theme-text"
                        data-testid="TransactionRowRecipientLabel"
                      >
                        Multipayment
                      </span>
                      <span
                        class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex justify-between items-center space-x-4"
              >
                <div
                  class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="flex overflow-hidden justify-center items-center px-1.5 h-full text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures text-theme-danger-info-text bg-theme-danger-info-background w-fit dark:border-theme-danger-info-border"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex items-center space-x-1 h-full"
                  >
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
